--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.14.11",
+    "@mui/icons-material": "^5.14.13",
     "@mui/joy": "^5.0.0-beta.8",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,10 +19,13 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
