--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "@types/node": "^16.18.55",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/react-query": "^1.2.9",
     "axios": "^1.5.1",
+    "browserify-zlib": "^0.2.0",
     "chart.js": "^4.4.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.11",
+    "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,5 +59,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^1.3.2",
+    "msw-react": "^0.0.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
